# gnome-games

./: .editorconfig  AUTHORS  CodingStyle.txt  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac  gnome-games-nightly.flatpakref  gnome-games.doap  jhbuild.modules
data/: Makefile.am  gtk-style.css  org.gnome.Games.appdata.xml.in  org.gnome.Games.desktop.in  org.gnome.Games.gresource.xml  org.gnome.Games.gschema.xml
data/blacklists/: desktop-base-name.blacklist
data/gamepads/: gamecontrollerdb.txt
data/gtk/: menus.ui
data/icons/: Makefile.am
data/ui/: #app-window.ui#  app-window.ui  application-window.ui  checkmark-item.ui  collection-box.ui  collection-header-bar.ui  collection-icon-view.ui  content-box.ui  display-box.ui  display-header-bar.ui  dummy-display.ui  empty-collection.ui  error-display.ui  error-info-bar.ui  game-icon-view.ui  gamepad-configurer.ui  gamepad-mapper.ui  gamepad-tester.ui  header-bar.ui  media-menu-button.ui  media-selector.ui  preferences-page-controllers.ui  preferences-page-plugins-item.ui  preferences-page-plugins.ui  preferences-page-switch-item.ui  preferences-page-video.ui  preferences-switch-item.ui  preferences-window.ui  quit-dialog.ui  remote-display.ui  reset-gamepad-mapping-dialog.ui  resume-dialog.ui  resume-failed-dialog.ui  search-bar.ui
plugins/: Makefile.am
plugins/amiga/: configure.ac
plugins/atari-2600/: configure.ac
plugins/atari-7800/: configure.ac
plugins/atari-lynx/: configure.ac
plugins/desktop/: configure.ac
plugins/doom/: configure.ac
plugins/dreamcast/: configure.ac
plugins/game-boy/: configure.ac
plugins/game-boy-advance/: configure.ac
plugins/game-cube/: configure.ac
plugins/libretro/: configure.ac
plugins/love/: configure.ac
plugins/mame/: configure.ac
plugins/master-system/: configure.ac
plugins/mega-drive/: configure.ac
plugins/ms-dos/: configure.ac
plugins/neo-geo-pocket/: configure.ac
plugins/nes/: configure.ac
plugins/nintendo-64/: configure.ac
plugins/nintendo-ds/: configure.ac
plugins/pc-engine/: configure.ac
plugins/playstation/: Makefile.am  configure.ac
plugins/sega-cd/: configure.ac
plugins/sega-saturn/: configure.ac
plugins/snes/: configure.ac
plugins/steam/: configure.ac
plugins/turbografx-cd/: configure.ac
plugins/wii/: configure.ac
plugins/wii-ware/: configure.ac
plugins/wonderswan/: configure.ac
src/: Makefile.am  app-window.vala  config.vala  credits.vala  gnome-games.deps  main.vala  utils.vala
src/command/: command-error.vala  command-runner.vala
src/commodore/: amiga-game.vala  amiga-tracker-query.vala
src/core/: cover.vala  dummy-game-source.vala  game-callback.vala  game-collection.vala  game-source.vala  game-uri-adapter.vala  game.vala  icon.vala  input-capabilities.vala  media-info.vala  media.vala  plugin-register-iterator.vala  plugin-register.vala  plugin-registrar.vala  plugin.vala  runner.vala  title.vala  uid.vala  uri-game-factory.vala  uri-iterator.vala  uri-source.vala
src/database/: database-error.vala  database-uri-iterator.vala  database-uri-source.vala  database.vala
src/desktop/: desktop-error.vala  desktop-game-source.vala  desktop-game.vala  desktop-runner.vala  desktop-tracker-query.vala
src/doom/: doom-game.vala  doom-tracker-query.vala
src/dummy/: dummy-cover.vala  dummy-game-source.vala  dummy-game.vala  dummy-icon.vala  dummy-runner.vala
src/event/: event-codes.vapi  event.c  event.h  event.vapi
src/gameinfo/: gameinfo-disc-id-disc-title.vala  gameinfo-disc-id-game-title.vala  gameinfo-disc-id-input-capabilities.vala  gameinfo-disc-id-title.vala  gameinfo-doc.vala  gameinfo-error.vala
src/gamepad/: gamepad-callbacks.vala  gamepad-dpad.c  gamepad-dpad.h  gamepad-dpad.vala  gamepad-dpad.vapi  gamepad-input-type.c  gamepad-input-type.h  gamepad-input-type.vala  gamepad-input-type.vapi  gamepad-input.c  gamepad-input.h  gamepad-input.vapi  gamepad-mapped-event.c  gamepad-mapped-event.h  gamepad-mapped-event.vala  gamepad-mapped-event.vapi  gamepad-mapping-builder.vala  gamepad-mapping-error.c  gamepad-mapping-error.h  gamepad-mapping-error.vala  gamepad-mapping-error.vapi  gamepad-mapping.c  gamepad-mapping.h  gamepad-mapping.vala  gamepad-mapping.vapi  gamepad-mappings-manager.c  gamepad-mappings-manager.h  gamepad-mappings-manager.vala  gamepad-mappings-manager.vapi  gamepad-monitor.c  gamepad-monitor.h  gamepad-monitor.vala  gamepad-monitor.vapi  gamepad.c  gamepad.h  gamepad.vala  gamepad.vapi  raw-gamepad-monitor.c  raw-gamepad-monitor.h  raw-gamepad-monitor.vala  (+13 more)
src/generic/: generic-game-uri-adapter.vala  generic-game.vala  generic-sync-game-uri-adapter.vala  generic-title.vala  generic-uid.vala  generic-uri-game-factory.vala  generic-uri-game-source.vala
src/gnome-games/: Makefile.am  main.vala
src/grilo/: grilo-cover.vala  grilo-media.vala
src/libgnome-games-core/: Makefile.am  game.vala
src/love/: love-game.vala
src/nec/: pc-engine-game.vala
src/nintendo/: game-boy-advance-game.vala  game-boy-game.vala  game-boy-header.vala  game-cube-game.vala  game-cube-tracker-query.vala  nes-game.vala  nes-tracker-query.vala  nintendo-64-game.vala  nintendo-64-tracker-query.vala  nintendo-ds-game.vala  nintendo-ds-tracker-query.vala  snes-game.vala  snes-tracker-query.vala  wii-game.vala  wii-header.vala  wii-tracker-query.vala  wii-uid.vala  wii-ware-game.vala  wii-ware-tracker-query.vala
src/retro/: retro-core-source.vala  retro-error.vala  retro-gamepad.vala  retro-input-manager.vala  retro-log.vala  retro-platform.vala  retro-runner.vala  retro-simple-game-uri-adapter.vala  retro-simple-type.vala  retro-simple-types.vala
src/sega/: dreamcast-game.vala  dreamcast-tracker-query.vala  dreamcast-uid.vala  game-gear-game.vala  game-gear-tracker-query.vala  master-system-game.vala  master-system-header.vala  master-system-tracker-query.vala  master-system.vala  mega-drive-game.vala  mega-drive-header.vala  mega-drive-tracker-query.vala  sega-saturn-game.vala  sega-saturn-tracker-query.vala
src/steam/: steam-game.vala  (+3 more)
tests/: Makefile.am  run.vala  test-case.vala
(+371 files in other folders)
