SUBDIRS =

if ENABLE_AMIGA_PLUGIN
SUBDIRS += amiga
endif

if ENABLE_ATARI_2600_PLUGIN
SUBDIRS += atari-2600
endif

if ENABLE_ATARI_7800_PLUGIN
SUBDIRS += atari-7800
endif

if ENABLE_DESKTOP_PLUGIN
SUBDIRS += desktop
endif

if ENABLE_DOOM_PLUGIN
SUBDIRS += doom
endif

if ENABLE_DREAMCAST_PLUGIN
SUBDIRS += dreamcast
endif

if ENABLE_GAME_BOY_PLUGIN
SUBDIRS += game-boy
endif

if ENABLE_GAME_BOY_ADVANCE_PLUGIN
SUBDIRS += game-boy-advance
endif

if ENABLE_GAME_CUBE_PLUGIN
SUBDIRS += game-cube
endif

if ENABLE_LOVE_PLUGIN
SUBDIRS += love
endif

if ENABLE_MAME_PLUGIN
SUBDIRS += mame
endif

if ENABLE_MASTER_SYSTEM_PLUGIN
SUBDIRS += master-system
endif

if ENABLE_MEGA_DRIVE_PLUGIN
SUBDIRS += mega-drive
endif

if ENABLE_NEO_GEO_POCKET_PLUGIN
SUBDIRS += neo-geo-pocket
endif

if ENABLE_NES_PLUGIN
SUBDIRS += nes
endif

if ENABLE_NINTENDO_DS_PLUGIN
SUBDIRS += nintendo-ds
endif

if ENABLE_NINTENDO_64_PLUGIN
SUBDIRS += nintendo-64
endif

if ENABLE_PC_ENGINE_PLUGIN
SUBDIRS += pc-engine
endif

if ENABLE_PLAYSTATION_PLUGIN
SUBDIRS += playstation
endif

if ENABLE_SEGA_SATURN_PLUGIN
SUBDIRS += sega-saturn
endif

if ENABLE_SNES_PLUGIN
SUBDIRS += snes
endif

if ENABLE_STEAM_PLUGIN
SUBDIRS += steam
endif

if ENABLE_WII_PLUGIN
SUBDIRS += wii
endif

if ENABLE_WII_WARE_PLUGIN
SUBDIRS += wii-ware
endif

-include $(top_srcdir)/git.mk
