SUBDIRS =

if ENABLE_DESKTOP_PLUGIN
SUBDIRS += desktop
endif

if ENABLE_DREAMCAST_PLUGIN
SUBDIRS += dreamcast
endif

if ENABLE_GAME_CUBE_PLUGIN
SUBDIRS += game-cube
endif

if ENABLE_LIBRETRO_PLUGIN
SUBDIRS += libretro
endif

if ENABLE_LOVE_PLUGIN
SUBDIRS += love
endif

if ENABLE_MAME_PLUGIN
SUBDIRS += mame
endif

if ENABLE_NINTENDO_DS_PLUGIN
SUBDIRS += nintendo-ds
endif

if ENABLE_PLAYSTATION_PLUGIN
SUBDIRS += playstation
endif

if ENABLE_SEGA_CD_PLUGIN
SUBDIRS += sega-cd
endif

if ENABLE_SEGA_SATURN_PLUGIN
SUBDIRS += sega-saturn
endif

if ENABLE_STEAM_PLUGIN
SUBDIRS += steam
endif

if ENABLE_TURBOGRAFX_CD_PLUGIN
SUBDIRS += turbografx-cd
endif

if ENABLE_WII_PLUGIN
SUBDIRS += wii
endif

-include $(top_srcdir)/git.mk
